Fix keyframes overlapping

--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,5 @@
 @import "mixins";
 
-
 .container {
   padding-top: 80px;
 }
@@ -73,31 +72,37 @@
     height: 400px;
   }
 
- .keyframes(three-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    35% { @{-}transform: translateX(-640px); }
-    70% { @{-}transform: translateX(-640px * 2); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(three-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      35% { @{-}transform: translateX(-640px); }
+      70% { @{-}transform: translateX(-640px * 2); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(four-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px); }
-    40% { @{-}transform: translateX(-640px * 2); }
-    60% { @{-}transform: translateX(-640px * 3); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(four-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px); }
+      40% { @{-}transform: translateX(-640px * 2); }
+      60% { @{-}transform: translateX(-640px * 3); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(five-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px); }
-    35% { @{-}transform: translateX(-640px * 2); }
-    55% { @{-}transform: translateX(-640px * 3); }
-    75% { @{-}transform: translateX(-640px * 4); }
-    95% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(five-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px); }
+      35% { @{-}transform: translateX(-640px * 2); }
+      55% { @{-}transform: translateX(-640px * 3); }
+      75% { @{-}transform: translateX(-640px * 4); }
+      95% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 }
 
@@ -114,31 +119,37 @@
     height: 400px / @md;
   }
 
- .keyframes(three-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    35% { @{-}transform: translateX(-640px / @md); }
-    70% { @{-}transform: translateX(-640px * 2 / @md); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(three-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      35% { @{-}transform: translateX(-640px / @md); }
+      70% { @{-}transform: translateX(-640px * 2 / @md); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(four-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px / @md); }
-    40% { @{-}transform: translateX(-640px * 2 / @md); }
-    60% { @{-}transform: translateX(-640px * 3 / @md); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(four-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px / @md); }
+      40% { @{-}transform: translateX(-640px * 2 / @md); }
+      60% { @{-}transform: translateX(-640px * 3 / @md); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(five-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px / @md); }
-    35% { @{-}transform: translateX(-640px * 2 / @md); }
-    55% { @{-}transform: translateX(-640px * 3 / @md); }
-    75% { @{-}transform: translateX(-640px * 4 / @md); }
-    95% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(five-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px / @md); }
+      35% { @{-}transform: translateX(-640px * 2 / @md); }
+      55% { @{-}transform: translateX(-640px * 3 / @md); }
+      75% { @{-}transform: translateX(-640px * 4 / @md); }
+      95% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 }
 
@@ -155,30 +166,36 @@
     height: 400px / @sm;
   }
 
- .keyframes(three-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    35% { @{-}transform: translateX(-640px / @sm); }
-    70% { @{-}transform: translateX(-640px * 2 / @sm); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(three-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      35% { @{-}transform: translateX(-640px / @sm); }
+      70% { @{-}transform: translateX(-640px * 2 / @sm); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(four-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px / @sm); }
-    40% { @{-}transform: translateX(-640px * 2 / @sm); }
-    60% { @{-}transform: translateX(-640px * 3 / @sm); }
-    85% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(four-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px / @sm); }
+      40% { @{-}transform: translateX(-640px * 2 / @sm); }
+      60% { @{-}transform: translateX(-640px * 3 / @sm); }
+      85% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 
-  .keyframes(five-slideshow);.-frames(@-...) {
-    0% { @{-}transform: translateX(0px); }
-    15% { @{-}transform: translateX(-640px / @sm); }
-    35% { @{-}transform: translateX(-640px * 2 / @sm); }
-    55% { @{-}transform: translateX(-640px * 3 / @sm); }
-    75% { @{-}transform: translateX(-640px * 4 / @sm); }
-    95% { @{-}transform: translateX(0px); }
-    100% { @{-}transform: translateX(0px); }
+  & {
+    .keyframes(five-slideshow);.-frames(@-...) {
+      0% { @{-}transform: translateX(0px); }
+      15% { @{-}transform: translateX(-640px / @sm); }
+      35% { @{-}transform: translateX(-640px * 2 / @sm); }
+      55% { @{-}transform: translateX(-640px * 3 / @sm); }
+      75% { @{-}transform: translateX(-640px * 4 / @sm); }
+      95% { @{-}transform: translateX(0px); }
+      100% { @{-}transform: translateX(0px); }
+    }
   }
 }
